* Corregi modelosR.Rmd

--- a/sesion_04/relaciones.Rmd
+++ b/sesion_04/relaciones.Rmd
@@ -2,7 +2,7 @@
 title: "Trabajando con datasets relacionados"
 author: "David Suárez <david.suarez@yahoo.com>"
 date: "28 de abril de 2018"
-output: revealjs::revealjs_presentation
+output: html_document
 ---
 ## Relacionando distintos datasets
 
