--- a/sesion_04/modelosR.Rmd
+++ b/sesion_04/modelosR.Rmd
@@ -38,7 +38,7 @@ La meta de la modelación no es descubrir la verdad, sino obtener una buena apro
 
 ```{r setup, message = FALSE}
 #library(tidyverse)
-
+library(ggplot2)
 library(modelr)
 options(na.action = na.warn)
 ```
